# @start 1
# configure.in -- Process this file with autoconf to produce configure
# @start 2
# Copyright (C) 2000 Gary V. Vaughan
#
# This program is free software; you can redistribute it and/or modify
# it under the terms of the GNU General Public License as published by
# the Free Software Foundation; either version 2, or (at your option)
# any later version.
#
# This program is distributed in the hope that it will be useful,
# but WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
# GNU General Public License for more details.
#
# You should have received a copy of the GNU General Public License
# along with this program; if not, write to the Free Software
# Foundation, Inc., 675 Mass Ave, Cambridge, MA 02139, USA.

# @start 1
AC_INIT(mesh2slim.cxx)
dnl AC_INIT([megapoly], [1.0.0211], [kanai@sfc.keio.ac.jp])
AC_CANONICAL_HOST
#AC_CONFIG_AUX_DIR(.)
AM_CONFIG_HEADER(config.h)
AM_INIT_AUTOMAKE(mesh2slim, 1.0.060108)
dnl AM_INIT_AUTOMAKE([$PACKAGE_TARNAME], [$PACKAGE_VERSION])
MESH2SLIM_MAJOR=1
MESH2SLIM_MINOR=0
MESH2SLIM_TINY=060108

dnl AM_CONDITIONAL(DEBUG, test "$enable_debug" = yes)
dnl AM_CONDITIONAL(MINGW32, test "$with_mingw32" = yes)

#AC_DISABLE_FAST_INSTALL

AC_PROG_CC
AC_PROG_CXX
AC_PROG_RANLIB

AC_HEADER_STDC
AC_HEADER_SYS_WAIT

AC_C_CONST
AC_TYPE_PID_T
AC_TYPE_SIZE_T

CXX="g++"
	     
AR="ar"
RANLIB="ranlib"
CXXFLAGS=""

AM_CONDITIONAL(CYGWIN, test 0)

case "$host" in
x86_64-*-*-*)
MEGAPOLY_VECMATH_INCDIR="../../megapoly/megapoly/include/vecmath-c++-1.2-1.4"
MEGAPOLY_UTIL_INCDIR="../../megapoly/megapoly/util"
;;
i*86-*-linux-*)
#ITLFLAGS="-DUSE_ITL -DUSE_ITL4"
dnl AM_CONDITIONAL(LINUX, test 1)
CXXFLAGS="$CXXFLAGS -march=i686"
MEGAPOLY_VECMATH_INCDIR="../../megapoly/megapoly/include/vecmath-c++-1.2-1.4"
MEGAPOLY_UTIL_INCDIR="../../megapoly/megapoly/util"
;;
i*86-*-cygwin)
AM_CONDITIONAL(CYGWIN, test 1)
CXXFLAGS="$CXXFLAGS -DWIN32 -D_WIN32 -D_WIN32_"
MEGAPOLY_VECMATH_INCDIR="../../megapoly/megapoly/include/vecmath-c++-1.2-1.4"
MEGAPOLY_UTIL_INCDIR="../../megapoly/megapoly/util"
;;
esac
AC_SUBST(MEGAPOLY_VECMATH_INCDIR)
AC_SUBST(MEGAPOLY_UTIL_INCDIR)

AC_MSG_CHECKING(if --enable-debug option specified)
AC_ARG_ENABLE(debug,
 	[  --enable-debug          Build a debugging version.],
 	[ts_cv_debug="yes"], [ts_cv_debug="no"])
if test "$ts_cv_debug" = yes; then
 	CXXFLAGS="$CXXFLAGS -g3 -O2"
else
#	CXXFLAGS="$CXXFLAGS -O3 -Wall -pg -Wno-deprecated -ffast-math -funroll-loops"
#	CXXFLAGS="$CXXFLAGS -O3 -Wall -march=i686 -Wno-deprecated -ffast-math -funroll-loops"
#	CXXFLAGS="$CXXFLAGS -O3 -Wall -pg -Wno-deprecated -fpermissive -ffast-math -funroll-loops"
#	CXXFLAGS="$CXXFLAGS -O3 -Wall -Wno-deprecated -fpermissive -ffast-math -funroll-loops"
#	CXXFLAGS="$CXXFLAGS -O3 -pg -fpermissive -fforce-addr -fforce-mem -falign-loops=2 -falign-functions=2 -falign-jumps=2 -funroll-loops -Wno-deprecated -fpermissive -ffast-math"
	CXXFLAGS="$CXXFLAGS -O3 -fpermissive -fforce-addr -fforce-mem -falign-loops=2 -falign-functions=2 -falign-jumps=2 -funroll-loops -Wno-deprecated -fpermissive -ffast-math"
#	CXXFLAGS="$CXXFLAGS -O3 -fomit-frame-pointer -fpermissive -fforce-addr -fforce-mem -falign-loops=2 -falign-functions=2 -falign-jumps=2 -funroll-loops -Wno-deprecated -fpermissive -ffast-math"
fi
AC_MSG_RESULT($ts_cv_debug)
	
AC_SUBST(ac_aux_dir)

# for all
AC_OUTPUT([Makefile],
	[test -z "$CONFIG_HEADERS" || echo timestamp > stamp-h.in])
# @end 1
